

=== 2.0.21 / ?? Mar 2010

* Fix for client closes a forwarded connection, but the server is reading, net-ssh terminates with IOError socket closed (http://net-ssh.lighthouseapp.com/projects/36253/tickets/7) [Miklós Fazekas]

* Fix for client force closes (RST) a forwarded connection, but server is reading, net-ssh terminates with exception [Miklós Fazekas]

* Fix for server closes the sending side, the on_eof is not handled. [Miklós Fazekas]

* Removed Hanna dependency in Rakefile [Delano Mandelbaum]


=== 2.0.20 / 10 Feb 2010

* Support "ProxyCommand none" directive [Andy Lo-A-Foe]

=== 2.0.19 / 16 Jan 2010

* Support plus sign in sshconfig hostname [Jason Weathered]

=== 2.0.18 / 15 Jan 2010

* Fix related to #recv(1) to #readpartial change in 2.0.16 [Hans de Graaff, Delano Mandelbaum]


=== 2.0.17 / 14 Dec 2009

* Don't load net/ssh/authentication/pageant on Windows with Ruby 1.9 [Travis Reeder, Delano Mandelbaum]


=== 2.0.16 / 28 Nov 2009

* Fix for "multiple hosts are separated by whitespace" [Akinori MUSHA]

* Add support for the ProxyCommand directive [Akinori MUSHA]

* Switched from #recv(1) to #readpartial in lib/net/ssh/transport/server_version.rb, so that closed sockets are recognized [Alex Peuchert]


=== 2.0.15 / 03 Sep 2009

* Scale back IO#select patch so it mutexes only zero-timeout calls [Daniel Azuma, Will Bryant]


=== 2.0.14 / 28 Aug 2009

* Fix for IO#select threading bug in Ruby 1.8 (LH-1) [Daniel Azuma]

* Fix for "uninitialized constant OpenSSL::Digest::MD5" exception in Net::SFTP [DL Redden]


=== 2.0.13 / 17 Aug 2009

* Added fix for hanging in ServerVersion#negotiate! when using SOCKS5 proxy (GH-9) [Gerald Talton]

* Added support for specifying a list of hosts in .ssh/config, with tests (GH-6) [ckoehler, Delano Mandelbaum]

* Added tests for arcfour128/256/512 lengths, encryption, and decryption [Delano Mandelbaum]

* Skip packet stream tests for arcfour128/256/512 [Delano Mandelbaum]
